--- a/templates/pdf_crawler/home.html
+++ b/templates/pdf_crawler/home.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-10 col text-center">
                 <h2>PDF crawler</h2>  </br>
-                <form action="{% url 'home' %}" method="post" enctype="multipart/form-data">
+                <form action="{% url 'pdf_crawler:home' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% if form.errors %}
                         {% for field in form %}
